2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Separate independence of --auto-volume-conpensation
	  Merge --buffer-bits to --buffer-fragments

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options

2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around long options

2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Add function prototypes

2003-08-03 mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_223): Fix typo

2003-08-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix almost all warnings

2003-08-02  mput <root@mput.dip.jp>

	* timidity/timidity.c: Fix typo and so on

2003-08-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix around long options

2003-07-31  mput <root@mput.dip.jp>

	* utils/tmdy_getopt.h: Moved from utils/getopt.h
	* timidity/timidity.c, utils/Makefile.am, utils/getopt.c:
	  Fix to fit above

2003-07-31  mput <root@mput.dip.jp>

	* utils/getopt.h: Fix including headers
	* timidity/timidity.c: Fix doubled header include

2003-07-29  mput <root@mput.dip.jp>

	* timidity/timidity.c (help): rewrite to fit with long options.
	  (set_tim_opt_short): Rename from set_tim_opt().
	  (set_tim_opt_long): Add.
	  (version): Add.
	* utils/getopt.[ch]: Add.
	* utils/support.[ch]: Delete getopt()

2003-07-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Support for modal interchange playing in pure intonation
	  Fix around user-defined temperament type

2003-07-22  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/effect.c, timidity/timidity.c:
	  Hack up noise shaping filter for 8-bit linear encoding
	  Update command help

2003-07-22  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c:
	  - Fixed the broken fallback-deveice selection.
	  - Changed the verbosity of gaussian table initialization
	    messages.
