@@ -1,5 +1,9 @@
 2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
+	* timidity/timidity.c: Fix typo again
+
+2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
 	* timidity/timidity.c:
 	  Separate independence of --auto-volume-conpensation
 	  Merge --buffer-bits to --buffer-fragments
